--- a/src/BTracking.Domain.Shared/Localization/BTracking/tr.json
+++ b/src/BTracking.Domain.Shared/Localization/BTracking/tr.json
@@ -4,6 +4,9 @@
     "Menu:Home": "Ana sayfa",
     "Welcome": "Hoşgeldiniz",
     "LongWelcomeMessage": "Uygulamaya hoşgeldiniz. Bu, ABP framework'ü üzerine bina edilmiş bir başlangıç projesidir. Daha fazla bilgi için abp.io adresini ziyaret edebilirsiniz.",
-    "CountryIdentityExists": "Ülke Kodu Sistemde Bulunmaktadır."
+    "CountryIdentityExists": "Ülke Kodu Sistemde Bulunmaktadır.",
+
+    "Menu:Countries": "Ülkeler",
+    "Countries": "Ülkeler"
   }
 }
