Finance Repository eklendi. investing üzerinden veri çeken botlar geliştirildi.

--- a/src/BTracking.Domain.Shared/Localization/BTracking/en.json
+++ b/src/BTracking.Domain.Shared/Localization/BTracking/en.json
@@ -10,6 +10,8 @@
 
     "Menu:Countries": "Countries",
     "Countries": "Countries",
+    "Menu:Finance": "Finance",
+    "Finance": "Finance",
 
     "Permission:Categories": "Categories",
     "Permission:KontrolBulutu": "Kontrol Bulutu",
